# mini-rds

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: aws.rs  main.rs  query.rs
